--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "axios": "^0.21.0",
     "bootstrap": "^4.5.3",
     "flag-icon-css": "^3.5.0",
+    "i18next": "^19.8.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-hook-form": "^6.9.5",
+    "react-i18next": "^11.7.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "web-vitals": "^0.2.4"
